// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The component should not render in body when closed 1`] = `<div />`;

exports[`The component should render in body when open 1`] = `<div />`;

exports[`The component should render in body when open 2`] = `
"<div>
  <div class=\\"backdrop visible fixed\\"></div>
</div>
<div>
  <div class=\\"container\\">
    <div class=\\"overlay\\">
      <section class=\\"content\\">
        <header>My overlay title<span class=\\"icon fa fa-times clickable\\" aria-label=\\"fa-times\\" role=\\"button\\" tabindex=\\"0\\"></span></header>
        <article>
          <p>My overlay content</p>
        </article>
        <footer>
          <button class=\\"button primary\\"><span class=\\"text\\">Apply</span></button>
        </footer>
      </section>
    </div>
  </div>
</div>"
`;

exports[`The component should render in body with actions when open 1`] = `<div />`;

exports[`The component should render in body with actions when open 2`] = `
"<div>
  <div class=\\"backdrop visible fixed\\"></div>
</div>
<div>
  <div class=\\"container\\">
    <div class=\\"overlay\\">
      <section class=\\"content\\">
        <header>My overlay title<span class=\\"icon fa fa-times clickable\\" aria-label=\\"fa-times\\" role=\\"button\\" tabindex=\\"0\\"></span></header>
        <article>
          <p>My overlay content</p>
        </article>
        <footer>
          <div class=\\"actions\\">
            <button class=\\"button link\\"><span class=\\"text\\">Action 1</span></button>
            <button class=\\"button link\\"><span class=\\"text\\">Action 2</span></button>
          </div>
          <button class=\\"button primary\\"><span class=\\"text\\">Apply</span></button>
        </footer>
      </section>
    </div>
  </div>
</div>"
`;

exports[`The component should render in body with loader instead of confirm button 1`] = `<div />`;

exports[`The component should render in body with loader instead of confirm button 2`] = `
"<div>
  <div class=\\"backdrop visible fixed\\"></div>
</div>
<div>
  <div class=\\"container\\">
    <div class=\\"overlay\\">
      <section class=\\"content\\">
        <header>My overlay title<span class=\\"icon fa fa-times clickable\\" aria-label=\\"fa-times\\" role=\\"button\\" tabindex=\\"0\\"></span></header>
        <article>
          <p>My overlay content</p>
        </article>
        <footer>
          <button class=\\"button primary loading\\" disabled=\\"\\"><span class=\\"text\\">Apply</span>
            <div class=\\"loader\\">
              <div style=\\"width: 25px; height: 25px;\\" class=\\"spinner\\">
                <div class=\\"doubleBounce1\\"></div>
                <div class=\\"doubleBounce2\\"></div>
              </div>
            </div>
          </button>
        </footer>
      </section>
    </div>
  </div>
</div>"
`;
